2007-11-30  Chris Rivera  <crivera@novell.com>

	* src/cups-autoconfig.c:

	Disable the ability to pause printers on 
	removal.  This is causing problems.

2007-11-29  Chris Rivera  <crivera@novell.com>

	* src/cups-autoconfig.c:

	Don't use the absolute path in the hal callout
	script.

	Move the fdi file to the thirdparty directory
	from the osvendor directory.

	Patches from Danny Kukawka.

2007-11-14  Chris Rivera  <crivera@novell.com>

	* src/cups-autoconfig.c:

	Remove the debug option in favor of always logging
	good debugging information.

	Set the printer.configured_existing property on old
	printers that have been plugged back in.  This lets
	gvm know that it doesn't need to do anything.  This
	should fix 304933.

2007-09-28  Chris Rivera  <crivera@novell.com>

	* src/cups-autoconfig.c:

	Default to not setting the CUPS policy for new printers.

2007-09-28  Chris Rivera  <crivera@novell.com>

	* src/cups-autoconfig.c:

	Use g_option_context_get_help() if no flags
	are provided.

2007-07-30  Chris Rivera  <crivera@novell.com>

	* src/cups-autoconfig.c:
	
	Set printer.configured and printer.display_name properties
	on the HAL printer instead of using DBus signals.

	* patches/gnome-volume-manager-printer-notify.patch:

	Update to reflect cups-autoconfig changes.
	

2007-07-27  Chris Rivera  <crivera@novell.com>

	* src/cups-autoconfig.c:

	Remove the migrate hal printers config option and make it
	a flag instead.

	Add the ability to autoconfigure all printers instead of
	just the printer specified by the HAL environment.  If
	the app is run without the HAL_PROP_INFO_UDI env set then
	it will attempt to autoconfigure all printers.  If the env
	is set then it will only configure the printer with that udi.

	More cleanup.

	More debugging output.

	* cups-autoconfig.spec:
	* src/Makefile.am:

	Create a symlink in libdir/hal/ to point to cups-autoconfig so
	the hal callout will actually work.

2007-07-25  Chris Rivera  <crivera@novell.com>
