@@ -1,3 +1,11 @@
+2007-12-30  Chris Rivera  <crivera@novell.com>
+
+	* src/cups-autoconfig.c:
+
+	Correct va_arg usage.  This was causing
+	a crash on x86-64.  Thanks to Wolfgang
+	Rosenauer.
+
 2007-11-30  Chris Rivera  <crivera@novell.com>
 
 	* src/cups-autoconfig.c:
